--- a/DLLTypeDB/DLLTypeDB.csproj
+++ b/DLLTypeDB/DLLTypeDB.csproj
@@ -3,6 +3,9 @@
   <Import Project="..\packages\Grpc.Tools.2.39.1\build\Grpc.Tools.props" Condition="Exists('..\packages\Grpc.Tools.2.39.1\build\Grpc.Tools.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
+    <LangVersion>8.0</LangVersion>
+  </PropertyGroup> 
+  <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{3299FA8A-1D59-4E33-A877-FC87CDB8AF4D}</ProjectGuid>
